--- a/composer.json
+++ b/composer.json
@@ -60,12 +60,13 @@
     },
     "autoload": {
         "psr-4": {
-            "App\\": "src/"
+            "Application\\": "src/Application",
+            "Domain\\": "src/Domain"
         }
     },
     "autoload-dev": {
         "psr-4": {
-            "App\\Tests\\": "tests/"
+            "Application\\Tests\\": "tests/"
         }
     },
     "replace": {
