--- a/config/routes.yaml
+++ b/config/routes.yaml
@@ -1,7 +1,7 @@
 controllers:
-    resource: ../src/Controller/
+    resource: ../src/Application/Controller/
     type: annotation
 
 kernel:
-    resource: ../src/Kernel.php
+    resource: ../src/Application/Kernel.php
     type: annotation
