--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,21 +1,53 @@
-version: '3'
+version: '3.7'
 
 services:
-###> doctrine/doctrine-bundle ###
-  database:
-    image: postgres:${POSTGRES_VERSION:-13}-alpine
-    environment:
-      POSTGRES_DB: ${POSTGRES_DB:-app}
-      # You should definitely change the password in production
-      POSTGRES_PASSWORD: ${POSTGRES_PASSWORD:-ChangeMe}
-      POSTGRES_USER: ${POSTGRES_USER:-symfony}
-    volumes:
-      - db-data:/var/lib/postgresql/data:rw
-      # You may use a bind-mounted host directory instead, so that it is harder to accidentally remove the volume and lose all your data!
-      # - ./docker/db/data:/var/lib/postgresql/data:rw
-###< doctrine/doctrine-bundle ###
+    php:
+        container_name: php-fpm
+        build:
+            context: ./.docker/php
+        ports:
+            - '9000:9000'
+        volumes:
+            - ./:/var/www/application
+        depends_on:
+            - database
+            - rabbitmq
 
-volumes:
-###> doctrine/doctrine-bundle ###
-  db-data:
-###< doctrine/doctrine-bundle ###
+    database:
+        container_name: database-server
+        image: mysql:8.0
+        command: --default-authentication-plugin=mysql_native_password
+        environment:
+            MYSQL_ROOT_PASSWORD: secret
+            MYSQL_DATABASE: therapy_scheme_generator
+            MYSQL_USER: app_user
+            MYSQL_PASSWORD: app_password
+        ports:
+            - '3306:3306'
+        volumes:
+            - ./.docker/mysql:/var/lib/mysql
+
+    nginx:
+        container_name: nginx-server
+        image: nginx:stable-alpine
+        ports:
+            - '8000:80'
+        volumes:
+            - ./:/var/www/application
+            - ./.docker/nginx/default.conf:/etc/nginx/conf.d/default.conf
+        depends_on:
+            - php
+            - database
+            - rabbitmq
+
+    rabbitmq:
+        container_name: rabbitmq-server
+        image: rabbitmq:3.9-management
+        ports:
+          - '5672:5672'
+          - '15672:15672'
+        environment:
+            RABBITMQ_DEFAULT_USER: rabbitmq
+            RABBITMQ_DEFAULT_PASS: secret
+        volumes:
+            - ./.docker/rabbitmq:/var/lib/rabbitmq
