Label refactored to DDD

--- a/composer.json
+++ b/composer.json
@@ -7,13 +7,15 @@
         "php": ">=8.0.2",
         "ext-ctype": "*",
         "ext-iconv": "*",
-        "doctrine/annotations": "^1.0",
+        "doctrine/annotations": "^1.13",
         "doctrine/doctrine-bundle": "^2.6",
         "doctrine/doctrine-migrations-bundle": "^3.2",
         "doctrine/orm": "^2.11",
         "phpdocumentor/reflection-docblock": "^5.3",
         "phpstan/phpdoc-parser": "^1.4",
-        "sensio/framework-extra-bundle": "^6.1",
+        "ramsey/uuid": "^4.3",
+        "ramsey/uuid-doctrine": "^1.8",
+        "sensio/framework-extra-bundle": "^6.2",
         "symfony/asset": "6.0.*",
         "symfony/console": "6.0.*",
         "symfony/doctrine-messenger": "6.0.*",
@@ -25,6 +27,7 @@
         "symfony/http-client": "6.0.*",
         "symfony/intl": "6.0.*",
         "symfony/mailer": "6.0.*",
+        "symfony/messenger": "6.0.*",
         "symfony/mime": "6.0.*",
         "symfony/monolog-bundle": "^3.0",
         "symfony/notifier": "6.0.*",
@@ -61,7 +64,7 @@
     "autoload": {
         "psr-4": {
             "Application\\": "src/Application",
-            "Domain\\": "src/Domain"
+            "Shared\\": "src/Shared"
         }
     },
     "autoload-dev": {
