--- a/config/routes.yaml
+++ b/config/routes.yaml
@@ -2,6 +2,10 @@ controllers:
     resource: ../src/Application/Controller/
     type: annotation
 
+labelControllers:
+    resource: ../src/Application/TSG/Scheme/Label/Application/Controller/
+    type: annotation
+
 kernel:
     resource: ../src/Application/Kernel.php
     type: annotation
